# zak-authe-gui

./: .gitignore  autogen.sh  configure.ac
data/utenti/gui/: Makefile.am  utenti.gui
data/zak-authe-gui/gui/: Makefile.am  zak-authe-gui.ui
doc/: Makefile.am
doc/utenti/examples/: Makefile.am
doc/zak-authe-gui/examples/: Makefile.am  zak-authe-gui.conf  zak-authe-gui_ldap.conf
src/: Makefile.am  main.c
tests/: test.db
